--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build:ui":"cd ../fullstackopen/part2/phonebook && npm run build && cp -r build ../../../fsobackend",
-    "deploy":"git push heroku main",
-    "deploy:full":"npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod":"heroku logs tail"
-    
-
+    "build:ui": "cd ../fullstackopen/part2/phonebook && npm run build && cp -r build ../../../fsobackend",
+    "deploy": "git push heroku main",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod": "heroku logs tail"
   },
   "author": "nik",
   "license": "MIT",
@@ -21,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.5.2",
     "morgan": "^1.10.0"
   }
 }
