--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build:ui": "cd ../fullstackopen/part2/phonebook && npm run build && cp -r build ../../../fsobackend",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs tail"
+    "logs:prod": "heroku logs tail",
+      "lint":"eslint ."
   },
   "author": "nik",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.22.0",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
